# simple-tensorrt-llm

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: peronality.mdc  planning.mdc  project-structure.mdc
t5_trt_converter/: __init__.py  cli.py  convert_checkpoint.py  converter.py  fill_template.py  helper.py  repo_builder.py  types.py
tests/: test_converter.py  test_repo_builder.py
trt/t5/: RUN_OUTPUT  build_triton_repo.sh  conv_t5.sh  convert_checkpoint.py  fill_triton_repo_template.py  python_cli_reqs.md  test_build_triton_repo.bats  utils.sh
trt/t5/repo_template/postprocessing/1/: model.py
trt/t5/repo_template/preprocessing/1/: model.py
trt/t5/repo_template/tensorrt_llm/1/: model.py
trt/t5/repo_template/tensorrt_llm_bls/1/: model.py
